# co-scienza

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/app/: agent.py  server.py
backend/app/tools/: uniprot.py  uniprot_search.py  uniprot_tools.py
